// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders as expected in default state 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-0:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-0:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-0:visited:not(:disabled) {
  color: #903D91;
}

<a
    class="emotion-0"
    href="#"
  >
    test link test
  </a>
</DocumentFragment>
`;

exports[`Link renders correctly with noUnderline property 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-0:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-0:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-0:visited:not(:disabled) {
  color: #903D91;
}

<a
    class="emotion-0"
    href="#"
  >
    test link text
  </a>
</DocumentFragment>
`;
